# scuff

./: Cargo.toml  compile.scuff  hello.scuff
src/: compilation_test.rs  compiler.rs  error.rs  lexer.rs  main.rs  makefile.rs  packager.rs  parser.rs  project.rs  token.rs  validate.rs
test_project/: project.toml  sprite1.scuff
testing/: hello.scuff  hello_world.scuff  test_project.scuff
testing/hello_world/: project.json  project.toml  sprite1.scuff
testing/test_project/: project.json
tests/: compilation_test.rs
tests/function_args/: expected.json  sprite1.scuff
tests/functions/: expected.json  sprite1.scuff
tests/hello_world/: expected.json  input.scuff  sprite1.scuff
tests/join_string/: expected.json  sprite1.scuff
tests/join_variables/: expected.json  sprite1.scuff
