[package]
name = "scuff"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonschema = "0.18.0"
md-5 = "0.10.6"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
toml = "0.8.14"
zip = "2.1.3"

[dev-dependencies]
paste = "1.0.15"
